opam-version: "2.0"
name:         "dkim"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/ocaml-dkim"
bug-reports:  "https://github.com/mirage/ocaml-dkim/issues"
dev-repo:     "git+https://github.com/mirage/ocaml-dkim.git"
doc:          "https://mirage.github.io/ocaml-dkim/"
license:      "MIT"
synopsis:     "Implementation of DKIM in OCaml for MirageOS"
description: """A light layer of the dkim library for MirageOS"""

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"             {>= "4.08.0"}
  "dune"              {>= "2.0.0"}
  "dkim"              {= version}
  "dns-client-mirage" {>= "8.0.0"}
  "mirage-ptime"
  "lwt"
  "alcotest"          {with-test}
  "digestif"          {with-test}
  "fmt"               {with-test}
  "logs"              {with-test}
  "mirage-crypto-rng" {with-test & >= "1.0.0"}
]
