opam-version: "2.0"
name:         "dkim"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/ocaml-dkim"
bug-reports:  "https://github.com/dinosaure/ocaml-dkim/issues"
dev-repo:     "git+https://github.com/dinosaure/ocaml-dkim.git"
doc:          "https://dinosaure.github.io/ocaml-dkim/"
license:      "MIT"
synopsis:     "Implementation of DKIM in OCaml"
description: """DKIM implementation in OCaml"""

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

pin-depends: [
  [ "base64.dev" "git+https://github.com/mirage/ocaml-base64.git"]
  [ "pecu.dev" "git+https://github.com/dinosaure/pecu.git"]
  [ "mrmime.dev" "git+https://github.com/mirage/mrmime.git"]
]

depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"       {build}
  "mrmime"
  "digestif"
  "hmap"
  "domain-name"
  "logs"
  "base64"
  "x509" {>= "0.6.3"}
  "alcotest"   {with-test}
]
