(executable
 (name body)
 (modules body)
 (libraries digestif.c dkim alcotest))

(executable
 (name dkim_field)
 (modules dkim_field)
 (libraries dkim alcotest))

(alias
 (name runtest)
 (deps (:body body.exe))
 (action (run %{body} --color=always)))

(alias
 (name runtest)
 (deps (:dkim_field dkim_field.exe))
 (action (run %{dkim_field} --color=always)))