(executable
 (name body)
 (modules body)
 (libraries digestif.c dkim alcotest))

(executable
 (name dkim_field)
 (modules dkim_field)
 (libraries digestif.c dkim alcotest))

(executable
 (name test)
 (modules test)
 (libraries digestif.c dkim alcotest))

(alias
 (name runtest)
 (deps (:body body.exe))
 (action (run %{body} --color=always)))

(alias
 (name runtest)
 (deps (:dkim_field dkim_field.exe))
 (action (run %{dkim_field} --color=always)))

(alias
 (name runtest)
 (deps (:test test.exe) (glob_files raw/*.mail))
 (action (run %{test} --color=always)))